# interactive-ehr

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
data/: dwh_table_design_2025-11-01.xlsx
data/dwh/: DPC_Dファイル.csv  DPC_EF統合ファイル.csv  DPC_Eファイル.csv  DPC_Fファイル.csv  DPC様式1.csv  DPC様式1_H26改正レイアウト.csv  RI検査.csv  RI検査レポート.csv  がん登録.csv  その他細菌検査結果.csv  インフォームドコンセント.csv  オンコロジーLMS_LESION.csv  オンコロジーLMS_LINE.csv  オンコロジーLMS_TIME_POINT.csv  オンコロジーエピソード.csv  オンコロジー副作用.csv  オンコロジー治療内容.csv  オーダ記事.csv  カルテテンプレート.csv  カルテ記事DR.csv  カルテ記事NS.csv  カルテ記事その他.csv  カルテ記事スタッフ.csv  カンファレンスユーザー.csv  カンファレンス患者.csv  サマリ病名.csv  サマリ管理.csv  サマリ記事.csv  バイタル.csv  リハビリ.csv  レセ電算DPCコーディング.csv  レセ電算DPC傷病.csv  レセ電算DPC包括評価.csv  レセ電算DPC合計調整.csv  レセ電算DPC外泊.csv  レセ電算DPC患者基礎.csv  レセ電算DPC診断群分類.csv  レセ電算DPC診療関連.csv  レセ電算コメント.csv  レセ電算レセプト共通.csv  (+93 more)
scripts/: generate_fake_csvs.py  generate_models.py
src/interactive_ehr/: app.py  sample_scenarios.py  scenario_graph.py
src/interactive_ehr/llm/: __init__.py  gemini.py
src/interactive_ehr/models/: __init__.py  _base.py  mr.py  nurse.py  order_exam.py  order_record.py  order_treatment.py  other.py  patient.py  registry.py
src/interactive_ehr/widgets/: __init__.py  _base.py  chart.py  display.py  input.py  layout.py  renderer.py
tests/: test_gemini.py  test_models.py  test_renderer.py  test_scenario_graph.py  test_widgets.py
