[project]
name = "interactive-ehr"
version = "0.1.0"
description = "タスクのグラフ構造化を用いたインタラクティブな電子カルテシステム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.73.1",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "openpyxl>=3.1.5",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
